@@ -14,8 +14,13 @@ public final class RuntimeBehavior {
   private static final String MEMORY_FRIENDLY_MODE = "testng.memory.friendly";
   public static final String STRICTLY_HONOUR_PARALLEL_MODE = "testng.strict.parallel";
   public static final String TESTNG_DEFAULT_VERBOSE = "testng.default.verbose";
+  public static final String IGNORE_CALLBACK_INVOCATION_SKIPS = "testng.ignore.callback.skip";
 
   private RuntimeBehavior() {}
+
+  public static boolean ignoreCallbackInvocationSkips() {
+    return Boolean.getBoolean(IGNORE_CALLBACK_INVOCATION_SKIPS);
+  }
 
   public static boolean strictParallelism() {
     return Boolean.getBoolean(STRICTLY_HONOUR_PARALLEL_MODE);
